--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: worker
-          image: kanwarnitin/multi-worker
+          image: nkanwar/multi-worker
