--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ before_install:
   - gcloud config set compute/zone europe-west1-b
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t kanwarnitin/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t nkanwar/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run kanwarnitin/react-test npm test -- --coverage
+  - docker run nkanwar/react-test npm test -- --coverage
 
 deploy:
   provider: script
